Change site name

--- a/userguide/config.toml
+++ b/userguide/config.toml
@@ -77,8 +77,8 @@ id = "UA-00000000-0"
 
 [languages]
 [languages.pt-br]
-title = "Curso"
-description = "Curso de Sequências"
+title = "Curso de Genômica e Genética Funcional de Microrganismos"
+description = "Curso de Genômica e Genética Funcional de Microrganismos"
 languageName ="Português"
 # Weight used for sorting.
 weight = 1
