--- a/userguide/config.toml
+++ b/userguide/config.toml
@@ -77,7 +77,7 @@ id = "UA-00000000-0"
 
 [languages]
 [languages.pt-br]
-title = "Curso de Genômica e Genética Funcional de Microrganismos"
+title = "Curso"
 description = "Curso de Genômica e Genética Funcional de Microrganismos"
 languageName ="Português"
 # Weight used for sorting.
